--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -41,7 +41,7 @@ h2 {
 }
 
 form {
-    min-width: 500px;
+    min-width: 600px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -83,9 +83,12 @@ form {
 }
 
 .error-span {
-    margin-top: 4px;
+    width: 80%;
+    align-items: flex-start;
+    margin-top: 0px;
     font-size: 14px;
     color: var(--error-color);
+    text-align: left;
 }
 
 .submit {
@@ -147,11 +150,49 @@ form {
 
 @media (max-width: 768px) {
     .container {
-        flex-direction: column; 
-        max-width: 500px;
+      max-width: 100%;
+      padding: 20px;
+      border-radius: 0;
+      box-shadow: none;
     }
-
-    .image-section {
-        height: 200px;
+  
+    form {
+      min-width: unset;
+      width: 100%;
+      gap: 16px;
     }
-}
+  
+    .input-field input {
+      width: 100%;
+      height: 45px;
+      font-size: 16px;
+      padding: 8px;
+    }
+  
+    .input-label {
+      font-size: 16px;
+      margin-left: 0;
+      align-self: flex-start;
+    }
+  
+    .submit {
+      width: 100%;
+      height: 45px;
+      font-size: 16px;
+      padding: 10px;
+    }
+  
+    h2 {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+  
+    .auth-link {
+      font-size: 14px;
+    }
+  
+    .form-footer {
+      padding: 16px;
+      font-size: 12px;
+    }
+  }
