--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,9 @@
 @import './variables.css';
 
+* {
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
 html, body {
     height: 100vh;
     margin: 0;
