--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -29,8 +29,9 @@
       filter 0.2s ease,
       transform 0.3s ease;
     filter: brightness(1);
+    fill: var(--font-color);
 }
-  
+
 .logoWrapper:hover .logoImage {
     filter: brightness(1.5);
     transform: scale(1.03); 
