--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,17 +1,12 @@
 .header {
-    position: fixed;
-    min-height: 60px;
-    height: auto;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
-    background-color: var(--main-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: var(--spacing-md) var(--spacing-xl);
-}  
+  width: 100%;
+  background-color: var(--main-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--spacing-md) var(--spacing-xxl);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+} 
   
 .logoWrapper {
     display: flex;
@@ -29,14 +24,14 @@
       filter 0.2s ease,
       transform 0.3s ease;
     filter: brightness(1);
-    fill: var(--font-color);
+    color: var(--font-color);
 }
 
 .logoWrapper:hover .logoImage {
     filter: brightness(1.5);
     transform: scale(1.03); 
 }
-  
+
 .actions {
     display: flex;
     align-items: center;
