--- a/src/pages/auth/AuthPage.module.css
+++ b/src/pages/auth/AuthPage.module.css
@@ -16,7 +16,7 @@
   border-radius: var(--border-radius);
   box-shadow: 0 12px 12px rgba(0, 0, 0, 0.08);
   overflow: hidden;
-  padding: var(--spacing-xl);
+  padding: var(--spacing-xl) 0;
 }
 
 .title {
@@ -29,7 +29,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-lg); /* равномерный отступ между полями и кнопкой */
+  gap: var(--spacing-lg); 
   align-items: center;
 }
 
@@ -76,7 +76,8 @@
   padding-top: var(--spacing-md);
   text-align: center;
   font-size: var(--font-size-sm);
-  color: rgba(221, 227, 234);
+  color: var(--font-color);
+  margin: 0;
 }
 
 @media (max-width: 768px) {
