--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -12,6 +12,7 @@
   --font-size-xl: 20px;
   --font-size-xxl: 24px;
   --font-size-title: 40px;
+  --font-size-title-lg: 43px;
 
   --spacing-xs: 4px;
   --spacing-sm: 8px;
