--- a/src/components/landing/Header/LandingHeader.module.css
+++ b/src/components/landing/Header/LandingHeader.module.css
@@ -1,8 +1,6 @@
-@import '../../../styles/variables.css';
-@import '../../../styles/global.css';
-
 .header {
   position: sticky;
+  height: 60px;
   top: 0;
   background-color: var(--main-color);
   display: flex;
@@ -13,7 +11,6 @@
   z-index: 1000;
 }
 
-  
   .logo {
     display: flex;
     align-items: center;
@@ -21,15 +18,23 @@
   }
   
   .logo img {
-    height: 50px;
+    height: 45px;
   }
   
+  .logo:hover {
+    transition:
+     background-color 0.1s ease,
+     transform 0.2s ease;
+    transform: scale(1.05); 
+  }
+
   .tryButton {
     background-color: var(--element-color);
     color: var(--main-color);
     padding: 8px 16px;
     border-radius: var(--border-radius);
     text-decoration: none;
+    font-size: var(--font-size-base);
     font-weight: 600;
     transition: background-color 0.3s ease;
     margin: var(--spacing-lg);
@@ -47,11 +52,11 @@
   }
   
   .pageWrapper {
-    flex: 1; /* растягиваем на всю высоту #root */
+    flex: 1;
     display: flex;
     flex-direction: column;
   }
   
   .pageContent {
-    flex: 1; /* толкает футер вниз */
+    flex: 1; 
   }
