--- a/src/components/landing/Main/Flow/Card.module.css
+++ b/src/components/landing/Main/Flow/Card.module.css
@@ -8,6 +8,7 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
     border: 1px solid var(--gray-color);
     margin: var(--spacing-xxl);
+    max-height: fit-content;
   }
   
   .title {
