--- a/src/components/HowItWork/HowItWork.module.css
+++ b/src/components/HowItWork/HowItWork.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   background-color: var(--main-color);
   border: 1px solid var(--gray-color);
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.05);
