--- a/src/components/HowItWork/HowItWork.module.css
+++ b/src/components/HowItWork/HowItWork.module.css
@@ -3,32 +3,24 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  background-color: var(--main-color);
+  background-color: transparent;
   border: 1px solid var(--gray-color);
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.05);
-  height: 75vh;
+  height: 60vh;
   box-sizing: border-box;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 65%;
-    height: 100%;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-width: 60%;
+  height: 100%;
+  margin: 0;
 }
-  
-.heading {
-    font-size: var(--font-size-title);
-    font-weight: 700;
-    color: var(--font-color);
-    text-align: left;
-}
-  
+
 .sliderContainer {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
