--- a/src/pages/LandingPage/LandingPage.module.css
+++ b/src/pages/LandingPage/LandingPage.module.css
@@ -9,5 +9,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  padding: var(--spacing-xl) 0; 
+  padding: var(--spacing-xl) 0;
+  gap: 50px;
 }
