--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   gap: var(--spacing-xxl);
   width: 100%;
-  padding: 50px 0;
+  padding: 50px 0 0 0;
 }
 
 .textContainer {
