--- a/src/components/ForOrganizations/ForOrganizations.module.css
+++ b/src/components/ForOrganizations/ForOrganizations.module.css
@@ -41,6 +41,8 @@
 
 .tabButton:hover {
   background: var(--element-color);
+  border: 1px solid var(--element-color);
+  color: var(--main-color);
   transform: scale(1.05);
 }
 
